# burrow

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
src/: config.rs  error.rs  filter.rs  lib.rs  main.rs  share.rs
src/server/: mod.rs  templates.rs
src/server/routes/: admin.rs  public.rs
src/tunnel/: mod.rs  spawned.rs
templates/: base.html  share.html
templates/admin/: dashboard.html  share_edit.html  share_form.html
tests/: share_lifecycle.rs
