[package]
name = "burrow"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["fs", "trace", "cors"] }
tower = "0.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2.0"
glob = "0.3"
nanoid = "0.5"
chrono = { version = "0.4", features = ["serde"] }
zip = "8.6"
async-tar = "0.6"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
futures = "0.3"
tokio-util = "0.7"
async-stream = "0.3"
